Fix of several overflows

--- a/svjis/articles/static/css/styles.css
+++ b/svjis/articles/static/css/styles.css
@@ -154,7 +154,8 @@ main {
 
 .main-content {
   background-color: gray;
-  width: auto;
+  /* width: 100%; */
+  display: inline-block;
   padding: 0px 5px 0px 5px;
 }
 
